# gpu-in-action

./: .gitignore  .jetson  CMakeLists.txt  README.md  compile_commands.json
examples/: CMakeLists.txt
examples/1.vector-add/: README.md
examples/1.vector-add/CUDA/: main.cu
examples/1.vector-add/OpenCL/: kernel.cl  main.cpp
examples/2.reduce-sum/: README.md
examples/2.reduce-sum/CUDA/: kernel.cu  main.cpp  main.cu
examples/2.reduce-sum/OpenCL/: kernel.cl  main.cpp
examples/3.dot-product/: README.md
examples/3.dot-product/CUDA/: main.cu
examples/3.dot-product/OpenCL/: kernel.cl  main.cpp
examples/4.vector-normalization/: README.md
examples/4.vector-normalization/CUDA/: main.cu
examples/4.vector-normalization/OpenCL/: kernel.cl  main.cpp
examples/5.prefix-sum-naive/: README.md
examples/5.prefix-sum-naive/CUDA/: kernel.cu  kernel.cuh  main.cu
examples/5.prefix-sum-naive/OpenCL/: kernel.cl  main.cpp
examples/6.matrix-transpose/: README.md
examples/6.matrix-transpose/CUDA/: kernel.cu  kernel.cuh  main.cu
examples/6.matrix-transpose/OpenCL/: kernel.cl  main.cpp
examples/7.matmul/: README.md
examples/7.matmul-naive/CUDA/: kernel.cu  kernel.cuh  main.cu
examples/7.matmul-naive/OpenCL/: kernel.cl  main.cpp
examples/7.matmul/CUDA/: kernel.cu
examples/7.matmul/OpenCL/: main.cpp
examples/8.conv2d/: README.md
examples/8.conv2d/CUDA/: kernel.cu  kernel.cuh  main.cu
examples/8.conv2d/OpenCL/: kernel.cl  main.cpp
helpers/: cuda_helper.hpp  helper.hpp  opencl_helper.hpp
